2007-12-07	Dmitry Dulepov	<dmitry@typo3.org>

	* Language files moved to translation server

2007-12-06	Dmitry Dulepov	<dmitry@typo3.org>

	* Fixed bug #2225: Labels cannot be overriden via TS
	* Fixed bug #5219: invalid attribute in javascript
	* Fixed bug #4642: Wrong syntax in static template

2007-10-01	Dmitry Dulepov	<dmitry@typo3.org>

	* Fixed: "Show all" did not expand all items
	* Fixed: FireFox displayed collapsed FAQs with indent if CSS styled content is used

2007-09-26	Dmitry Dulepov	<dmitry@typo3.org>

	* Related FAQs are now shown in single view

2007-09-26	Dmitry Dulepov	<dmitry@typo3.org>

	* Added related and related_links field to tx_irfaq_q table
	* Added TCEmain hook to handle bidirectional relations between FAQ items
	* Added displaying of related and related_links fields
	* Documentation updated to list new stdWrap entries for related items

2006-11-08  Patrick Broens  <patrick@netcreators.com>
	+ Added a language label for show/hide all

2006-10-27  Patrick Broens  <patrick@netcreators.com>
	~ CSS-styles in static template instead of standard typoscript
	~ Locallang files to XML

2006-10-24  Patrick Broens  <patrick@netcreators.com>

	~ The answer string was not processed correctly with the parseFunc function from tslib_cObj based on configuration set in "lib.parseFunc_RTE" in the current TypoScript template.

2005-10-24  Ingo Renner  <typo3@ingo-renner.com>

	* FIX fixed bug with category selector, now using cHash. Thanks to Benjamin A. Schmit

2005-10-19  Ingo Renner  <typo3@ingo-renner.com>

	* FIX rendering now works like regular content elements

2005-09-30  Ingo Renner  <typo3@ingo-renner.com>

	* ADD added italian translation

2005-07-18  Ingo Renner  <typo3@ingo-renner.com>

	* FIX fixed bug which resulted in a SQL error when retrieving questions from more than one page

2005-05-20  Ingo Renner  <typo3@ingo-renner.com>

	* CHG XHTML Strict compliant

2005-04-08  Ingo Renner  <typo3@ingo-renner.com>
