@@ -36,4 +36,7 @@ $GLOBALS ['TYPO3_CONF_VARS']['SC_OPTIONS']['t3lib/class.t3lib_tcemain.php']['pro
 
 // Hook to comments for comments closing
 $GLOBALS['TYPO3_CONF_VARS']['EXTCONF']['comments/pi1/class.tx_comments_pi1.php']['tx_irfaq_q'] = 'EXT:irfaq/class.tx_irfaq_comments_hooks.php:tx_irfaq_comments_hooks->irfaqHook';
+
+// eID
+$GLOBALS['TYPO3_CONF_VARS']['FE']['eID_include']['irfaq'] = 'EXT:irfaq/class.tx_irfaq_eID.php';
 ?>
