@@ -3,6 +3,12 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 <title>FAQ Example Template</title>
+<!-- ###HEADER_PARTS### -->
+<link rel="stylesheet" href="###SITE_REL_PATH###res/styles.css" />
+<!-- ###HEADER_PARTS### -->
+<!-- ###HEADER_PARTS_RATING### -->
+<script type="text/javascript" src="###SITE_REL_PATH###res/rating.js"></script>
+<!-- ###HEADER_PARTS_RATING### -->
 </head>
 
 <body>
@@ -76,6 +82,7 @@ RELATED_LINKS - related links (if any)
 			###RELATED_FAQ###
 			###RELATED_LINKS###
 		</div>
+		###RATING###
 	</div>
 	<!-- ###FAQ### end-->
 	<!-- ###ANSWERS###  end -->
@@ -121,6 +128,7 @@ RELATED_LINKS - related links (if any)
 				###RELATED_FAQ###
 				###RELATED_LINKS###
 			</div>
+			###RATING###
 		</dd>
 		<!-- ###FAQ### end-->
 	<!-- ###CONTENT###  end -->
@@ -217,6 +225,44 @@ RELATED_LINKS - related links (if any)
 
 </div>
 <!-- ###TEMPLATE_STATIC_SEPARATE### end -->
+
+<br />
+<br />
+<br />
+<br />
+<hr />
+<br />
+<br />
+<br />
+<h3>TEMPLATE_RATING_PROTOTYPE</h3>
+<em>This is the template for rating display and update (using Prototype's Ajax)</em>
+
+<!-- ###TEMPLATE_RATING_POPUP### end -->
+<div class="tx-irfaq-rating">
+	<div>
+		<div class="tx-irfaq-rating-prefix">
+			###TEXT_RATING###
+		</div>
+		<div class="tx-irfaq-bar">
+			<div class="tx-irfaq-rating-bar" id="tx-irfaq-rating-bar-###UID###" style="width: ###PERCENT_INT###%;">
+			</div>
+		</div>
+	</div>
+	<div class="tx-irfaq-cleaner"></div>
+	<div id="tx-irfaq-rating-###UID###">
+		###VOTES_STR###.
+		<span id="tx-irfaq-select-###UID###">
+			###TEXT_YOUR_VOTE###
+			<select onchange="tx_irfaq_recordVote(this,###MIN_RATING###,###MAX_RATING###)">
+				<option value=""></option>
+				<!-- ###VOTE_SUB### -->
+				<option value="index.php?eID=irfaq&amp;cmd=vote&amp;rating=###VOTE###&amp;uid=###UID###&amp;pid=###PID###&amp;chk=###CHECK###">###VOTE###</option>
+				<!-- ###VOTE_SUB### -->
+			</select>
+		</span>
+	</div>
+</div>
+<!-- ###TEMPLATE_RATING_POPUP### end -->
 
 </body>
 </html>
