@@ -1,3 +1,7 @@
+2007-12-10	Dmitry Dulepov	<dmitry@typo3.org>
+
+	* Added ratings
+
 2007-12-07	Dmitry Dulepov	<dmitry@typo3.org>
 
 	* Language files moved to translation server
